--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-    <div id="header-wrapper">
-  	</div>
-    <div id="printing">
-    </div>
-    <div id="footer">
-    </div>
+  <div id="con"></div> 
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
   <script type="text/javascript" src="/assets/app.js"></script>
 </body>
